[gd_scene load_steps=22 format=2]

[ext_resource path="res://Scripts/notes.gd" type="Script" id=1]
[ext_resource path="res://Graphics/UI/RectangleBgShadow.png" type="Texture" id=2]
[ext_resource path="res://Graphics/UI/baseDataContainer2.png" type="Texture" id=3]
[ext_resource path="res://Fonts/Nunito_regular16.font" type="BitmapFont" id=4]
[ext_resource path="res://Graphics/UI/BottomButtonAcross.png" type="Texture" id=5]
[ext_resource path="res://Fonts/Nunito_extra_bold20.font" type="BitmapFont" id=6]
[ext_resource path="res://Fonts/Nunito_regular28.font" type="BitmapFont" id=7]
[ext_resource path="res://Graphics/UI/backNormalMini.png" type="Texture" id=8]
[ext_resource path="res://Graphics/UI/backPressedMini.png" type="Texture" id=9]
[ext_resource path="res://Graphics/UI/backHoverMini.png" type="Texture" id=10]
[ext_resource path="res://Graphics/UI/resizeTriangle.png" type="Texture" id=11]

[sub_resource type="StyleBoxFlat" id=1]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.0376892, 0.208964, 0.371094, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = false
anti_aliasing_size = 1

[sub_resource type="StyleBoxEmpty" id=2]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=3]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxTexture" id=4]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 330, 62 )
margin_left = 30.0
margin_right = 30.0
margin_top = 10.0
margin_bottom = 30.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 0.0509804, 0.215686, 0.372549, 1 )
draw_center = true
_sections_unfolded = [ "Expand Margin", "Margin", "Modulate" ]

[sub_resource type="StyleBoxTexture" id=5]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 330, 62 )
margin_left = 30.0
margin_right = 30.0
margin_top = 10.0
margin_bottom = 30.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 0.0431373, 0.176471, 0.294118, 1 )
draw_center = true
_sections_unfolded = [ "Expand Margin", "Margin", "Modulate" ]

[sub_resource type="StyleBoxTexture" id=6]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 330, 62 )
margin_left = 30.0
margin_right = 30.0
margin_top = 10.0
margin_bottom = 10.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 0.0509804, 0.254902, 0.443137, 1 )
draw_center = true
_sections_unfolded = [ "Content Margin", "Expand Margin", "Margin", "Modulate" ]

[sub_resource type="StyleBoxFlat" id=7]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.112152, 0.408455, 0.683594, 1 )
draw_center = true
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 0
border_color = Color( 0.21225, 0.536909, 0.835938, 1 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = false
anti_aliasing_size = 1
_sections_unfolded = [ "Border", "Border Width", "Corner Radius" ]

[sub_resource type="StyleBoxFlat" id=8]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = 3.0
content_margin_bottom = -1.0
bg_color = Color( 0.161774, 0.454254, 0.726562, 1 )
draw_center = true
border_width_left = 2
border_width_top = 0
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.300125, 0.59176, 0.863281, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1
_sections_unfolded = [ "Border", "Border Width", "Content Margin", "Corner Radius", "Expand Margin" ]

[sub_resource type="StyleBoxFlat" id=9]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = 3.0
content_margin_bottom = -1.0
bg_color = Color( 0.0627451, 0.290196, 0.501961, 1 )
draw_center = true
border_width_left = 2
border_width_top = 0
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.120544, 0.377735, 0.617188, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1
_sections_unfolded = [ "Border", "Border Width", "Content Margin", "Corner Radius", "Expand Margin" ]

[sub_resource type="StyleBoxEmpty" id=10]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[node name="Notes" type="Node" index="0"]
script = ExtResource( 1 )
_sections_unfolded = [ "Mouse", "Patch Margin", "custom_styles" ]

[node name="Notes" type="NinePatchRect" parent="." index="0"]
editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 155.0
margin_top = 165.0
margin_right = 455.0
margin_bottom = 465.0
rect_min_size = Vector2( 300, 300 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
patch_margin_left = 15
patch_margin_top = 15
patch_margin_right = 15
patch_margin_bottom = 15
_sections_unfolded = [ "Anchor", "Material", "Patch Margin", "Rect", "Visibility" ]

[node name="Panel" type="Panel" parent="Notes" index="0"]
editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 50.0
margin_right = -8.0
margin_bottom = -8.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/panel = SubResource( 1 )
_sections_unfolded = [ "Margin", "Theme", "custom_styles" ]

[node name="NinePatchRect" type="NinePatchRect" parent="Notes/Panel" index="0"]
self_modulate = Color( 0.210938, 0.187042, 0.187042, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16
_sections_unfolded = [ "Grow Direction", "Margin", "Material", "Patch Margin", "Visibility" ]

[node name="TextEdit" type="TextEdit" parent="Notes/Panel/NinePatchRect" index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 33.0
margin_right = -10.0
margin_bottom = -10.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 4 )
text = ""
readonly = false
highlight_current_line = false
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
override_selected_font_color = false
context_menu_enabled = true
smooth_scrolling = false
v_scroll_speed = 80.0
hiding_enabled = 0
wrap_enabled = false
caret_block_mode = false
caret_blink = false
caret_blink_speed = 0.65
caret_moving_by_right_click = true
_sections_unfolded = [ "Margin", "custom_fonts", "custom_styles" ]

[node name="Label" type="Label" parent="Notes/Panel/NinePatchRect" index="1"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 12.0
margin_top = 11.0
margin_right = 62.0
margin_bottom = 28.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 4 )
text = "BED 1:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Button" type="Button" parent="Notes/Panel" index="1"]
visible = false
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -41.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = ExtResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Done"
flat = false
align = 1
_sections_unfolded = [ "Margin", "custom_fonts", "custom_styles" ]

[node name="MovePanel" type="Panel" parent="Notes" index="1"]
show_behind_parent = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 6
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/panel = SubResource( 7 )
_sections_unfolded = [ "Margin", "Mouse", "Theme", "Visibility", "custom_styles" ]

[node name="Label" type="Label" parent="Notes" index="2"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 30.0
margin_top = 15.0
margin_right = -30.0
margin_bottom = 43.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.161499, 0.45782, 0.738281, 1 )
text = "Notes"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="back" type="TextureButton" parent="Notes" index="3"]
modulate = Color( 0.917684, 1, 0.897704, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 11.0
margin_top = 12.0
margin_right = 34.0
margin_bottom = 42.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 10 )

[node name="resizeArea" type="TextureRect" parent="Notes" index="4"]
modulate = Color( 0.0588235, 0.27451, 0.478431, 1 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -35.0
margin_top = -33.0
margin_right = -11.0
margin_bottom = -11.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 11 )
stretch_mode = 0
_sections_unfolded = [ "Visibility" ]

[node name="Node" type="Node" parent="." index="1"]

[node name="notesButton" type="Button" parent="." index="2"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 3.0
margin_top = -1.0
margin_right = 142.0
margin_bottom = 28.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 10 )
custom_styles/normal = SubResource( 9 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.313873, 0.636036, 0.945312, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
text = "Notes"
flat = false
align = 1
_sections_unfolded = [ "custom_colors", "custom_fonts", "custom_styles" ]

